# adore_dynamics

./: CMakeLists.txt  README.md  package.xml
include/dynamics/: comfort_settings.hpp  dynamic_game_data.hpp  integration.hpp  motion_models.hpp  physical_vehicle_model.hpp  physical_vehicle_parameters.hpp  traffic_participant.hpp  trajectory.hpp  vehicle_command.hpp  vehicle_state.hpp
src/: dynamic_game_data.cpp  traffic_participant.cpp  trajectory.cpp  vehicle_command.cpp  vehicle_state.cpp
test/: CMakeLists.txt  integrate_test.cpp  vehicle_command_test.cpp
